# swe

./: CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  Makefile  equations.f90  equations.mod  equations_par.f90  halos.f90  init_par.f90  observer.f90  observer.mod  observer_par.f90  sources.f90  sources.mod  swe.f90  swe_mpi_help.f90
src/libswe/: equationsc.c  equationsc.h  observerc.c  observerc.h
src/swelib/: equationsc.c  equationsc.h
test/: Makefile  README.md  swe_c.c  swe_f.f90
util/nf90_test/: Makefile
util/nf90_test/src/: nf90_test.f90  nf90mpi_create.f90  nf90mpi_test.f90
util/swesource/: Cargo.toml
util/swesource/src/: lib.rs  main.rs
util/swesource_netcdf3/: Cargo.toml
util/swesource_netcdf3/src/: lib.rs  main.rs
util/swesource_py/: swesource.py
